--- a/app/views/posts/edit.js.erb
+++ b/app/views/posts/edit.js.erb
@@ -10,22 +10,22 @@ $('#modal_edit').html(`
                         </button>
                     </div>
                     <div class="modal-body">
-                        <%= form_with(model: @post, remote: true) do |form| %>
+                        <%= form_with(model: @post, method: :patch, remote: true) do |form| %>
                             <div class="field">
-                            <%= form.label :title %>
-                            <%= form.text_field :title %>
+                                <%= form.label :title %>
+                                <%= form.text_field :title %>
                             </div>
-                        
                             <div class="field">
-                            <%= form.label :content %>
-                            <%= form.text_field :content %>
+                                <%= form.label :content %>
+                                <%= form.text_field :content %>
                             </div>
-                        <% end %>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-primary" id="edit" data-id="<%= @post.id %>">Editar</button>
-                    </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                <%= form.submit "edit", class: "btn btn-primary", id: "edit"%>
+                            </div>
+                            <% end %>
                     </div>
                 </div>
                 </div>`);
+
+$('#myModal').modal()
