--- a/app/views/posts/edit.js.erb
+++ b/app/views/posts/edit.js.erb
@@ -1,31 +1,49 @@
 $('#modal_edit').empty();
 $('#modal_edit').html(`
                 <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Edicion de Tarea</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <%= form_with(model: @post, method: :patch, remote: true) do |form| %>
-                            <div class="field">
-                                <%= form.label :title %>
-                                <%= form.text_field :title %>
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Edición de Post</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
                             </div>
-                            <div class="field">
-                                <%= form.label :content %>
-                                <%= form.text_field :content %>
+                            <div class="modal-body p-2">
+                                <%= form_with(model: @post, method: :patch, remote: true) do |form| %>
+                                    <table>
+                                        <tbody>
+                                            <tr>
+                                                <div class="field">
+                                                    <td>
+                                                        <%= form.label 'Título' %>
+                                                    </td>
+                                                    <td>
+                                                        <%= form.text_field :title, size:'30px' %>
+                                                    </td>
+                                                </div>
+                                            </tr>
+                                            <tr>
+                                                <div class="field">
+                                                    <td>
+                                                        <%= form.label 'Contenido' %>
+                                                    </td>
+                                                    <td>
+                                                        <%= form.text_field :content, size:'30px' %>
+                                                    </td>
+                                                </div>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                        <%= form.submit "Guardar", class: "btn btn-primary", id: "edit"%>
+                                    </div>
+                                <% end %>
                             </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                                <%= form.submit "edit", class: "btn btn-primary", id: "edit"%>
-                            </div>
-                            <% end %>
+                        </div>
                     </div>
                 </div>
-                </div>`);
+            `);
 
 $('#myModal').modal()
