--- a/app/views/posts/update.js.erb
+++ b/app/views/posts/update.js.erb
@@ -1,11 +1,12 @@
-$('#my_modal').modal('dispose');
-
 $('#post_<%= @post.id %>').empty();
 
 $('#post_<%= @post.id %>').html(`
-                        <td><%= @post.title %></td>
-                        <td><%= @post.content %></td>
-                        <td><%= link_to 'Show', @post, remote: true %></td>
-                        <td><%= link_to 'Edit', edit_post_path(@post.id), remote: true %></td>
-                        <td><%= link_to 'Destroy', @post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                        `);
+<td><%= @post.title %></td>
+<td><%= @post.content %></td>
+<td><%= link_to 'Show', @post, remote: true %></td>
+<td><%= link_to 'Edit', edit_post_path(@post.id), remote: true %></td>
+<td><%= link_to 'Destroy', @post, remote: true, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+`);
+
+$('#modal_edit').empty()
+$('.modal-backdrop').remove()
